--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,11 @@ before_install:
   - sudo apt-get update  
   - sudo apt-get remove --purge google-chrome-stable -y || true 
   - Rscript -e 'install.packages(c("cpp11", "waldo", "gtable", "purrr"), repos="https://cloud.r-project.org")'
+  - sudo rm -f /etc/apt/sources.list.d/google-chrome.list
+  - sudo rm -f /etc/apt/trusted.gpg.d/google-chrome.gpg
+  - sudo apt-get update
+
+
 
 install:
   - Rscript -e 'install.packages("remotes", repos="https://cloud.r-project.org")'
