--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,11 @@ before_install:
   - sudo apt-key del D38B4796 || true
   - sudo apt-get remove --purge google-chrome-stable chromium-browser -y || true
   - sudo apt-get update --allow-releaseinfo-change || true
-  # 🚀 **安装 `knitr`, `rmarkdown`, `httr` 以支持 Vignette 和 API 访问**
-  - Rscript -e 'install.packages(c("httr", "cpp11", "waldo", "gtable", "purrr", "knitr", "rmarkdown"), repos="https://cloud.r-project.org")'
 
 install:
+  # 🚀 **先手动安装 `httr` 及所有依赖**
+  - Rscript -e 'install.packages(c("httr", "cpp11", "waldo", "gtable", "purrr", "knitr", "rmarkdown"), repos="https://cloud.r-project.org")'
+  # 🚀 **然后安装 remotes 并下载剩余的 package 依赖**
   - Rscript -e 'install.packages("remotes", repos="https://cloud.r-project.org")'
   - Rscript -e 'remotes::install_deps(dependencies = TRUE)'
 
