--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,19 +2,15 @@ Package: RTextCleaner
 Title: A Toolkit for Cleaning and Processing Text Data in R
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: RTextCleaner provides a set of functions for text preprocessing, 
-including text normalization, sentiment analysis, noise removal, and code-text 
-separation. It is designed to improve text quality for NLP tasks and data analysis.
+    person("Skylar", "Shao", email = "skylar.shao@example.com", 
+           role = c("aut", "cre"), comment = c(ORCID = "YOUR-ORCID-ID"))
+Description: RTextCleaner provides functions for text preprocessing, including 
+    text normalization, sentiment analysis, noise removal, and code-text separation.
+    It improves text quality for NLP tasks and data analysis.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-Suggests: 
-    testthat (>= 3.0.0),
-    mockery
-Config/testthat/edition: 3
 Depends:
     R (>= 4.0.0)
 Imports:
